remove feedback from section pages, fix feedback alignment and padding

--- a/site/assets/scss/_variables_project.scss
+++ b/site/assets/scss/_variables_project.scss
@@ -612,7 +612,7 @@ h2.side-bar-title {
 .feedback--title {
   font-weight: 700 !important;
   margin-bottom: 10px !important;
-  margin-top: 16px ;
+  margin-top: 64px;
 }
 
 h2 {
